<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tituloPageUsuario"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/pageUsuario"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/tituloPageUsuario"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="45dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="371dp" />

        <TextView
            android:id="@+id/tituloCompras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/compras"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="269dp"
            android:layout_height="263dp"
            android:layout_marginTop="92dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/tituloCompras" />

        <TextView
            android:id="@+id/nameUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="236dp"
            android:text="@string/completeName"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phoneUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:text="@string/telefono"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="233dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>